- remove ``network`` scope in :meth:`atomx.Atomx.report` and add
  ``network_managed``, ``network_buy``, ``network_sell``
- Add new models:

  * :class:`atomx.models.AccountManager` (alias for `User`)
  * :class:`atomx.models.CampaignDebugReason`
  * :class:`atomx.models.CreativeAttribute`
  * :class:`atomx.models.PlacementType`
  * :class:`atomx.models.Visibility`

- Add :meth:`atomx.models.ScheduledReport.save` to edit ``name`` and ``emails``
  of a :class:`atomx.models.ScheduledReport`
- :meth:`atomx.Atomx.get` also accepts a model class or instance as resource argument.
  E.g.: ``atomx_api.get(atomx.models.Advertiser)`` or ``atomx_api.get(atomx.models.Advertiser(42))``
- Add :mod:`pickle` support for :mod:`atomx.models`.
- Save HTTP headers in :attr:`atomx.Atomx.last_response`.
- Add history support. :meth:`atomx.models.AtomxModel.history`.


1.4
---

- Change default API version to `v2`
- If :meth:`atomx.Atomx.post` returns a list, auto-convert list of objects
  to a list of :mod:`atomx.models` models. (Useful for `POST` to the `/domains` endpoint)
- Add :class:`atomx.models.ScheduledReport`
- :meth:`atomx.Atomx.report` accepts ``when`` and ``interval`` to create a
  :class:`atomx.models.ScheduledReport`


1.3
---

- Add :meth:`atomx.Atomx.delete` to send a ``HTTP DELETE`` request to the api
- :meth:`atomx.Atomx.get` and :meth:`atomx.Atomx.delete` accept non-keyword arguments
  that are used to compute the final resource path
- Add `emails` parameter to :meth:`atomx.Atomx.report`
- Model attributes that are dates get automatically converted to a python :mod:`datetime`
- When saving a model, dates, sets and decimals get automatically converted
  to there json counterpart
- Add `save_response` parameter to :class:`atomx.Atomx` to save the response meta data
  of the last api call


1.2
---

- You can now remove model attributes with `del`
- Add :meth:`atomx.models.Report.csv` property that returns the report content as a list