@@ -1,2 +1,2 @@
 VERSION = '1.5b'
-API_VERSION = 'v2'
+API_VERSION = 'v3'
