@@ -12,13 +12,18 @@
   * :class:`atomx.models.PlacementType`
   * :class:`atomx.models.Visibility`
 
-- Add :meth:`atomx.models.ScheduledReport.save` to edit ``name`` and ``emails``
-  of a :class:`atomx.models.ScheduledReport`
+- Add :meth:`atomx.models.Report.save` to edit ``name`` and ``emails``
+  of a :class:`atomx.models.Report`
 - :meth:`atomx.Atomx.get` also accepts a model class or instance as resource argument.
   E.g.: ``atomx_api.get(atomx.models.Advertiser)`` or ``atomx_api.get(atomx.models.Advertiser(42))``
 - Add :mod:`pickle` support for :mod:`atomx.models`.
 - Save HTTP headers in :attr:`atomx.Atomx.last_response`.
 - Add history support. :meth:`atomx.models.AtomxModel.history`.
+- Use api version 3::
+
+  * Fast reporting. No more polling if reports are ready.
+  * Use authentication token in HTTP header instead of cookies.
+  * Model and attribute changes
 
 
 1.4
